--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -7,4 +7,14 @@
         android:title="@string/menu_search"
         android:icon="@drawable/ic_search"
         app:showAsAction="always"/>
+
+
+    <item
+        android:id="@+id/menu_search_view"
+        android:title="@string/menu_search"
+        android:icon="@drawable/ic_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
+
+
 </menu>
