--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="error_view_title">#cc000000</color>
+    <color name="error_view_subtitle">#78000000</color>
+    <color name="error_view_retry">#69F0AE</color>
+
 </resources>
